--- a/first/src/main/resources/application.properties
+++ b/first/src/main/resources/application.properties
@@ -1,4 +1,11 @@
-spring.application.name=first
+spring.application.name=first-Jpa
 #server.port=1807
 logging.level.root = TRACE
 # We have multiple logging lebels in Springboot -> { TRACE,DEBUG,INFO,ERROR } here we can enable those
+
+spring.datasource.url =jdbc:mysql://localhost:3306/demo_db
+spring.datasource.username =user
+spring.datasource.password =password
+spring.jpa.hibernate.ddl-auto = update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.show-sql=true
