--- a/first/src/main/resources/application.properties
+++ b/first/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=first-Jpa
 #server.port=1807
-logging.level.root = TRACE
+#logging.level.root = TRACE
 # We have multiple logging lebels in Springboot -> { TRACE,DEBUG,INFO,ERROR } here we can enable those
 
 spring.datasource.url =jdbc:mysql://localhost:3306/demo_db
